bdr.BDR.scala.error
Erreur de compilation :
BDR:3: error: not found: value R
  if(message==R){
              ^BDR:7: error: not found: value L
  if(message==L){
              ^BDR:11: error: not found: value I
  if(message==I){
              ^BDR:16: error: not found: value A
  if(message==A){
              ^BDR:19: error: not found: value B
  if(message==B){
              ^BDR:23: error: not found: value C
  if(message==C){
              ^BDR:28: error: not found: value Z
  if(message==Z){
              ^BDR:31: error: not found: value Y
  if(message==Y){
              ^BDR:35: error: not found: value X
  if(message==X){
              ^